--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/HostingTest.loader.js";
+      var loaderUrl = buildUrl + "/HostingHTML.loader.js";
       var config = {
-        dataUrl: "https://media.githubusercontent.com/media/Youkwangchae/HostingTest/main/Build/HostingTest.data",
-        frameworkUrl: buildUrl + "/HostingTest.framework.js",
-        codeUrl: buildUrl + "/HostingTest.wasm",
+        dataUrl: buildUrl + "/HostingHTML.data",
+        frameworkUrl: buildUrl + "/HostingHTML.framework.js",
+        codeUrl: buildUrl + "/HostingHTML.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Designer",
