[Fix] dataURL 경로 수정

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/HostingHTML.loader.js";
       var config = {
-        dataUrl: buildUrl + "/HostingHTML.data",
+        dataUrl: "https://media.githubusercontent.com/media/Youkwangchae/HostingHTML/main/Build/HostingHTML.data",
         frameworkUrl: buildUrl + "/HostingHTML.framework.js",
         codeUrl: buildUrl + "/HostingHTML.wasm",
         streamingAssetsUrl: "StreamingAssets",
